--- a/src/app/product-description/product-description.component.html
+++ b/src/app/product-description/product-description.component.html
@@ -1,5 +1,5 @@
 
- <div class="description">
+ <div class="row description">
   <div class="col-sm-2">
     <img src="assets/opacity-zero.jpg" alt="product image" />
   </div>
