--- a/src/app/product-description/product-description.component.html
+++ b/src/app/product-description/product-description.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="col-sm-6">
     <p class="album-name">{{albumInfo?.album.name}}</p>
-    <p class="band-name">{{albumInfo?.band.name}}</p>
+    <p class="band-name">{{albumInfo?.artist}}</p>
     <p class="album-release-date">September 25, 2014</p>
   </div>
 </div>
