--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <ul>
 <li *ngfor="let product  of products">
-{{product.albumName}}
+<a routerLink='/product/{{product.id}}' routerLinkActive='active'>{{product.albumName}}</a>
 
 </li>
 
